src/style.css
body[data-starry] {
    background-image: url("/assets/img/detail/sky.png");
    background-repeat: repeat;
    background-color: #050505;
}

.mist {
    image-rendering: pixelated;
    background-repeat: repeat;
}

@font-face {
    font-family: "Lexend-VariableFont";
    src:
        local("Lexend-VariableFont"),
        url("/assets/fonts/Lexend-VariableFont_wght.ttf");
}

.hoverable:hover {
    background-color: var(--mantine-color-dark-6);
}

body[data-starry=true] .hoverable:hover {
    background-color: rgba(0,0,0, 0.4);
}

.mantine-Accordion-content {
    padding: 0px;
}

.mantine-Accordion-control {
    background-color: unset;
}

body[data-starry=true] .frost {
    background-color: rgba(0,0,0,0.2);  /* rgba(255, 255, 255, 0.1); */ /*#1A1B1E88*/
    box-shadow: inset 0 0 10px rgba(0,0,0, 0.2);
    backdrop-filter: blur(10px);
}

body[data-starry=true] .header {
    background-color: rgba(0,0,0,0.2);
    box-shadow: inset 0 0 0px rgba(0,0,0, 0.5);
    border-radius: var(--mantine-radius-md);
    backdrop-filter: blur(5px);
}

body[data-starry=true] .mantine-SegmentedControl-root {
    background-color: rgba(0,0,0,0.2);  /* rgba(255, 255, 255, 0.1); */ /*#1A1B1E88*/
    box-shadow: inset 0 0 10px rgba(0,0,0, 0.2);
    backdrop-filter: blur(10px);
}

body[data-starry=true] .mantine-SegmentedControl-indicator {
    background-color: rgba(0,0,0,0.4);  /* rgba(255, 255, 255, 0.1); */ /*#1A1B1E88*/
    box-shadow: inset 0 0 10px rgba(0,0,0, 0.4);
}

.pageForeground {
    width: 100vw;
    height: 100vh;
    position: fixed;
    z-index: 999;
    left: 0;
    top: 0;
    pointer-events: none;
}

.pageBackground {
    width: 100vw;
    height: 100vh;
    position: fixed;
    z-index: -999;
    left: 0;
    top: 0;
    pointer-events: none;
}

@keyframes heartBurst {
    0% { transform: scale(0); opacity: 1; }
    100% { transform: scale(1); opacity: 0; }
}

.heart {
    position: absolute;
    font-size: 2em;
    animation: heartBurst 1s ease-out;
    animation-fill-mode: forwards;
    color: #ab9df2;
    z-index: 20;
}

.scrollbarOnLeft .mantine-ScrollArea-scrollbar {
    inset-inline-start: unset !important;
    right: unset !important;
}

.scrollbarOnLeft .mantine-ScrollArea-viewport {
    padding-right: unset;
    padding-left: var(--scrollarea-scrollbar-size);
}

.listAlignEnd.mantine-List-root {
    padding-left: 0;
    padding-right: var(--_list-pl,0);
}

.listAlignEnd .mantine-List-itemWrapper {
    flex-direction: row-reverse;
}

.listAlignEnd .mantine-List-itemIcon {
    margin-left: var(--_item-icon-mr,var(--mantine-spacing-sm));
    margin-right: var(--_item-icon-ml,0);
}

.rainbowText {
    background-image: repeating-linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
    text-align: center;
    background-size: 800% 800%;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    animation-timing-function: linear;
    animation-name: rainbow;
    animation-duration: 3s;
    animation-iteration-count: infinite;
    animation-fill-mode: forwards;
}

.transText {
    background-image: repeating-linear-gradient(to right, #26c6da, #f48fb1, #eeeeee, #f48fb1, #26c6da);
    text-align: center;
    background-clip: text;
    -webkit-text-fill-color: transparent;
}

@keyframes rainbow {
    0% {
        background-position: 0% 0%
    }

    100% {
        background-position: 110% 0%
    }
}

@keyframes execution {
    0% {
        top: "100%",
    }

    100% {
        top: "-300%",
    }
}

body[data-flash] :is(
    .mantine-Button-root,
    .mantine-ActionIcon-root,
    .flashable
) {
    animation: flash 500ms forwards ease-out;
}

@keyframes flash {
    0% {
        box-shadow: inset 5em 5em #ffffff66;
    }
    100% {
        box-shadow: inset 5em 5em #ffffff00;
    }
}

